# backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  init_db.py  main.py
app/models/: SelectedChannelsRequest.py  __init__.py  board.py  user.py
app/routes/: __init__.py  auth.py  board.py  celery_tasks.py  celery_test.py  channel.py  gpt.py  keyword.py  profile.py  share.py  subscriptions.py  user.py
app/schemas/: SelectedChannelsRequest.py  __init__.py  board.py  gpt.py  user.py
app/services/: __init__.py  auth.py  board_service.py  celery_tasks.py  channel_service.py  google_service.py  gpt_service.py  user_service.py
app/tests/: test_boards.py  test_dalle.py  test_gcs.py  test_redis.py  test_regenerate.py  test_share.py  test_signup.py  test_user.py
app/utils/: __init__.py  celery_app.py  dalle_handler.py  db_handler.py  gcs_handler.py  gpt_handler.py  image_generator.py  jwt_handler.py  redis_handler.py  redis_utils.py  shared_link.py  time.py  utils.py
