[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = "A FastAPI project"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = "0.27.1"

[tool.poetry.dev-dependencies]
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"